# tiny_techind

./: .gitignore  Cargo.toml  README.md  analyst.toml  techind.config.toml
src/: main.rs
src/config/: config.rs
