[package]
name = "tiny_techind"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.12.11", features = ["json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.134"
